# fastapi-elk-chaos-lab

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
chaos-api/app/: main.py
chaos-api/app/core/: logging_config.py
chaos-api/app/scenarios/: registry.py
chaos-api/app/scenarios/memory_pressure/: controller.py  model.py  service.py
chaos-api/app/shared/: controller.py  state.py
chaos-api/app/traffic/: controller.py  model.py  service.py
elasticsearch/index-templates/: app-logs-template.json  chaos-events-template.json
filebeat/: filebeat.yaml
logstash/config/: logstash.yaml
logstash/pipeline/: logstash.conf
