[project]
name = "fastapi-with-elk-observability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.4.1",
    "fastapi[standard]>=0.139.0",
    "loguru>=0.7.3",
    "psutil>=7.2.2",
    "python-json-logger>=4.1.0",
]
